--- a/AcousticFWI/Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Acoustic-wave-equation.ipynb
@@ -180,7 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127 85 85\n"
+      "202 85 85\n"
      ]
     }
    ],
@@ -198,9 +207,9 @@
     "from matplotlib import animation\n",
     "\n",
     "hstep=0.025 #space increment d  = minv/(10*f0);\n",
-    "tstep=0.004 #time increment dt = .5 * hstep /maxv;\n",
+    "tstep=0.004 #time increment dt < .5 * hstep /maxv;\n",
     "tmin=0.0 #initial time\n",
-    "tmax=.5 #simulate until\n",
+    "tmax=0.8 #simulate until\n",
     "xmin=-1.0 - 2*hstep #left bound\n",
     "xmax=1.0 + 2*hstep #right bound...assume packet never reaches boundary\n",
     "ymin=-1.0 - 2*hstep #left bound\n",
@@ -215,7 +224,7 @@
     "print(nt,nx,ny)\n",
     "u  = np.zeros((nt,nx,ny)) #solution to WE\n",
     "rec= np.zeros((nt,nx)) # receiver all over x at y=0\n",
-    "xsrc=0.0\n",
+    "xsrc=-0.95\n",
     "ysrc=0.0\n",
     "\n",
     "#set source as Ricker wavelet for f0 \n",
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -251,13 +260,13 @@
     "                u[ti,a,b]=ts(0,u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,sos**-2,tstep,hstep)\n",
     "            else:\n",
     "                u[ti,a,b]=ts(u[ti-2,a,b],u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,sos**-2,tstep,hstep)\n",
-    "            if np.absolute(b-floor(ny/2))<hstep/2 :\n",
-    "                rec[ti,a]=u[ti,a,b] "
+    "            if a==5 :\n",
+    "                rec[ti,b]=u[ti,a,b] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -289,26 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALkAAAAPBAMAAABKEHMHAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzRAiu5mrdu/dZoky\nVEQKohj3AAADCElEQVQ4Ea2TPWhTURTHf31Jk/QlTUJBBFH7BKsWh0RxUBwMKuKiRPxAaKlBEFSU\nxqFWdKm6qFgRFMFBfAh+gEOiGKrG4bkI0qFZXHRIHESc2savtlLjufc+aVpXD7zLeff/cc897zyg\nAxVWz4AH0ZFXBPZv97AGSzXeHimXi6w+10fsVk+5zObyLmEqjkG6RvYq6cLoGun1BbChrtGWinUD\nazl7WEX0N61wkkKj0ciRJVSxJfsRyFJ1DUcj1hU2phday/syutNaACsPGPdH8ISWIts5DJd4D+uQ\nykK0uwSSreKSC8+SuG44GgkNEcr8624PETUCwcLGfQdUnYIq5TL0e8+gmyK8IprBuh6Vhnjxa6SS\naI5GEkmiRjzviGCO9roWzLn/gPHKTkXrdMR9fCsvJY/niX9zoq6kn+VRndEcjaQyhH+r3fmRyBGf\nlS0tMLVb38U9Pzk6UFPUu06o8diVJChP/4w6h4xaFoHPESQitc9gjQyoG89FKkv8p7xm1JZxD/yC\nsaeTLsOyFZeXQ5OOZMq3tdEhq6o/9iKL5XMEiU7Q8pMv6YD0qSm2FImJgb7wPPeGw0EH2jLYvZ3X\nZEwnRHX/9VQNUlr/3LMMRyOL+TATGKbL09jfxXc3Ar8zctp4fhoKNdgHD7CnHMJJsHMULsApLY5c\nwHAUgj04Ohu6MnhPQStuq1gqWaqoO2ME/sxI36uV8+LuEs6B+I1V1CWIOMTkI92EQJrgLIajEIlQ\nXb7hgkhkaTcCAXx3URccmQep/R2B9dKSkEtKpOqGx7FkphJ1gjNqZoSjEImWXKKok6ZF9bWuBbLp\nu59BftOq9J1YlnD6osxLmrGs1J6GbcTkbpEMbV8NRyP2RcbSEXHPN3mL4RCtSS3w3eUnaatYVwkW\nrWE2lUvH+OjwUHol7vEO7Dzt4m67VPOGo5Fwh7VEfZouOb857rDG0wKZt6PTx2nLydie9qB0wKOz\n0ZgmdqRUg40VUb3p6ZOeq0n9tH+3rIpjkNK+GgycdWWzOdYOnvAFzbv/P/8Dc8MLREAPZoMAAAAA\nSUVORK5CYII=\n",
-      "text/latex": [
-       "$$1.06287873679e-07$$"
-      ],
-      "text/plain": [
-       "1.06287873679e-07"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#COmpare with analytical solution, have an expression for Helmholtz, trickier for time domain"
    ]
@@ -348,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -392,8 +386,8 @@
     "for ti in range(0,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
-    "            if np.absolute(b-floor(ny/2))<hstep/2:\n",
-    "                resid=rec[nt-ti-1,a]\n",
+    "            if a==5:\n",
+    "                resid=rec[nt-ti-1,b]\n",
     "            else:\n",
     "                resid=0\n",
     "            if ti==0:\n",
@@ -408,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -440,22 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAq8AAAAVBAMAAACagRqUAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAAGQElEQVRYCe1YX4hUVRj/zZ2ZO/9n9iXwQfKWlAmRAxokCU4ZElHt6MPqQ7WXyGpx\naadCV0F0MGM3WtxVK9Ao5yUiDHagHoLSRrIQWWzqqYdgJ4lCKtfWnPXfOn3fd+6dPXMnQdG9bNR5\nOOc753fO9/v9vr177t0F/m+zVIGANUuJ/8Np72Dvy4AHBp+QKvAYOHJ8cBC9A1/xSqAC8/i2LIJj\nj3TQdHBLB9bZ80s6MrirStO21jtwFHhhy4k2wE8uhG3hF84Vxx5qOmVf/UMlR6GYFa1ktoMdUydw\nm3roWTxol8zldJqr1YVgBeMWRTIajUbjqrkXy7O0ksihxwruw0uIXgI2lJJ5HGxMEdBEViA1yXNv\nexobs6gg7a26n1wIdtqsSzjNGoZLLjv5SgJ/QBQqs6I1XDU/gXQK9rpCS5ZWdFld5nIaeSBSRGQa\nmTKtypikgtbSI0jnaGVrDqeBn/ELsB9Yj1AO63+lDTPIjiou89zTjBFE8ykLQWJoaX5ymY9P2Ewu\nnGkbsRGXnXx9D9wPUShmldbFwOuQTuAW5TJpydICP3dSFVZOYwsQyyJ+AH1cABmjQLQjk0eU9gXv\nyuE8MGy/C0x0GOc4U427GeSjkkk72lqohlQ9moNZ9kB+cgE7bKYXzlgZ6T8ddva1C9gIUShmldYn\ngXFbOoE92mmqZ/GgEVVYOY0e4JDgchVQJOOH6MshQr/70XDO/IvklbptKmxohLfWuJtB8M9XQaaG\n+HT8LztqyfaWzkcuVVhiH7fCdSqsRKIeo6uxE6JQzCqtV4HRqnQCt8iWiZ7FgzqFldN0nWBI8Kec\nXTLmEKMnlq7OheEc3qYn1iL0SzuzZoDeRacW0VtJR8IVwBygN5ze+iqIT2Ficqe+6MQ+cjULK5wJ\nfqY4Yl/pxj0W/R6SQmWWI/MKFXYzdwUFt/miw80sFOtNFVZSFBCt4GECA29WZIsa6SmLnkV4CmaB\nBAwD3QX6dbqAvrWIVbEaK0s6Mu8LOnooGyxKBrdbWUTgApKNLnehOfrJ5VwFrr9REsVOxRe+PW9D\nFCqzrDV4AVjwGndFBbf5IhtulqYjJ1CFlRRFGHkclvU3OhTMYx+F6/DDJKKgwoYLKX5iEzn01ZF8\nh7BQuQWJ7kHwPfQ6CVQaqMLee9vFkrOgDT5y7bAdXuH8lCcUiS/jaPcBQBSKWY60wgrc7osSuFmc\nzM2hpbCpMig7tRhXzBk30Wj0z5vGd1xYLHp5uAocA385GHTxInmuBcF+O723/24CsOFzbmso6ivS\nVWDUsMTJy6jbfORqFpY5kzlWQJH4ug/GRVspZLMSmfSwjm7mriBwuy8ti2vHHZ2rQE4jcJYLG8wi\nNE24M8qPBOm6WZTC0kVkI1IjSXkYk2m6fS9pyFKgs0qvKk/LVJCajtkIcF69+cnlfhU4nNsdh0o9\nVXpB1VWYrqvoCr3mqtIJ3O4LcLPopiRWhYWc5sLSVZCpI8Rf+Wo06b1GLVxLnTkz8X6BwmeAH6nq\n9FVgXKLqJusa0rDRaWWKfEJvdHMYdb5TTumrFPvJ5RZWcaYqWCqRqN98FkhbrsJwTUX0TC2xuXte\n4HZfaGbx+KKv5bosSQrEy/zyiuWQ4G9UNQao5sY+LMiqlcXZwDkEKohkU3THjiTpus1ryFv0vZCN\nFYECLc60yAiSefpExqqZNYn85HILqzjnA69q7PvoZZEVhWJWad0KfA3pFFz0+oKepdWaU1g5zS+v\n3VRGC+MF+s6XESkqbKTLXMvHMjlssjdYeHBw6DfgUfRU6Y/CxVxyF7kTqSlE8ujlRa0dRk9HvAsG\n59Wbn1xSWNdX8LPBk2XlUNR/YGMRRKGYlQiJqrlHdQK3+5rJ4vGlnlj6O0tSIFmRPxA+HnsMOALI\nSK9CYOhYifpo51Urylh3o3GZpmM/ASt2f6Mj8THeue0Vixb19mI/7b39+An+ANbXFYdPXCcPHrFc\nX2H6H0hZsYuvwO9DJUehmBWt5sB2+v8Ldwpu86Vl8fhKnr58ComaOo1wCQnPo9ZShVsxic82gSZy\nznAtp3ugogmbjdCYjaTXyDlnuAZI4KpriLxVy8/eqkTXkWeucJl5ErvsOgTfzBbrZg7f4Nm5whXi\n6y/op5obLNS/dftC4G+HbWaDCOQuHwAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAg8AAAAVBAMAAAAz2RBFAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAAE00lEQVRYCe1WS2hcZRT+5k7mziOZx0YQFHPVRSyIGSRCszJYcCE+osi4UXsRaxta\nmFEoqSBmlEoiBhNtFenGgLhSSKDuxDqliqVIHVyIKzMtBQnUJqTJtNHG8Tz+m5l7K5cY7mykB+bc\n85/vnP9858x/H8AtMROIObdGcTePYAjYPfWEDOPQ5Bng0ORpXtxplH32jQJIFT0k4RpLkDsuT01V\nOdQvmjU+Ped30yr6Wsp4/5FzN9UyrXgtBfCSrIVprkB2CfEaFh2y7A8xXMQLOEhN4yv6sUrU7ZMY\nc+LHoEj8KddYggy2Wq0Gh/pFsD7gD78b3ailvGrI1YPFTCteS354qClrYYpRIFlFchP5BfLmZpEb\nsWaRYvdxcrDaBbyDJeASBLEfX3bVUoSOUM5fQFaS9TPwUBDrQi3hlXUQJ9o+Ma0Yuj4IePm8DkKY\n4giQLiJzAmXeJD+KVLOngSyFPPgsOVg9CSy668CMa5AJF2oJUgXeCpTgpWBHgYNBrAu1hE1qBDb/\nmZ1iCBu6nQjbSR2EMMUY8IUEyK1RHkHyz3wDmU2gyoNg9Tcw/8saMDFnEBqEWozUgUxFdvArweYf\nxdt+t6yiriVsMmtuygkUM4QN3QDoDUK7SNQxLQHPs07TiVgt15C5BqtIM2Bl36B2Kx/RiXAUAQ1C\nLEWAHso8MH5GtvGUYrnWfY7n6bhGXEvZYHn1pqEbwiagg4GYeiJMF6kaHiFv7L0aY6kVJK49XEXs\nOvaDBsEqfh3or84AeyuK8CDEUgT8p2dOYjdvsCUG+2nd3XJ5RuS1lA36WiWvhHc1hE2A5/WuOgjD\n1BrFNwK8W+DLc/h1VbOrPAhWGpioZGecfx+EvQIM12155Xo1TJZ1eu+JLVfbiLiW6fP+2zbm2jXE\n+g+DyC5AqaY/5lRr/PbNcpVujWyBZiDKphMxX8HAqzN1QehhQbcGxxgkOQosDbzmcv6+r1mephex\nZD0Aa0P8jLUl4lrKxmpgUHpo11GA1oZ4B8KmuTW0v9gKDyJeRA89H1lyzXwN2c0DoEGIwg16a9QJ\nWXYFkUGopUjviDxQOblDBCNi/ZzaKV2oJWzSLmKmh61yhjC86xYghnlraBc0CLo18k30rGpUokGN\nWc3frlzZ+F0Uf1MNugS+CEFkEGopUm4ANNWAMPYK3TQ5JwB0oZawKVOdi4FahrBHPICaQWgXmQV+\nWKZH0HuVwqxj6C8mZ9FHpx3HOY/U68D32FWMXYVBJlxjCYL+GvAJHTQOb4tg9DHaU2z7xOpCLeFF\nn0PYE6jlteJd/bAZhHZBD8v3aQAOFiv2OpIl+xnQERkrUMoap5Hqrdsf4LC7z/EQGoTGCILFGnAY\ntv/1qVmfuxjQTzXaykgXagmbTAkW9+ATboV93tUH8iDoO1K76KvJB9WXPz4GnAKmv5vjb4ILlHC0\nRQeNlT35ZgEpDlDk/KenHLUEoTcGHYcf7vHVoKclZ8UuT8+hl+p1SvS1lM1dZ88B37qdpRSgvqSl\nANa39NdF9DaUKRJENHh4fVtFsPgsgj22u0UmpJkwDMN0X9S2W2WHcc4O83aSZoUkhWGYpMQ9IckR\nQLYTwSbb3eKlkMAwzB6lxKGQ5Aig0D8igv19Wzi+lX8RhsnLLR4W4d/rf7u6F/gHVYiss+9fiO8A\nAAAASUVORK5CYII=\n",
       "text/latex": [
-       "$$\\left ( 3.37949265493e-08, \\quad 3.37949265493e-08, \\quad 1.32348898008e-23, \\quad 1.0\\right )$$"
+       "$$\\left ( 3.90440901007e-08, \\quad 3.90440901007e-08, \\quad 0.0, \\quad 1.0\\right )$$"
       ],
       "text/plain": [
-       "(3.37949265493e-08, 3.37949265493e-08, 1.32348898008e-23, 1.0)"
+       "(3.90440901007e-08, 3.90440901007e-08, 0.0, 1.0)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +458,7 @@
     "# Actual adjoint test\n",
     "term1=0\n",
     "for ti in range(0,nt):\n",
-    "    term1=term1+srca[ti]*source(0.0,0.0,(nt-ti-1)*tstep)\n",
+    "    term1=term1+srca[ti]*source(xsrc,ysrc,(nt-ti-1)*tstep)\n",
     "\n",
     "term2=LA.norm(rec)**2\n",
     "\n",
@@ -492,88 +486,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def smooth10(vel,nx,ny):\n",
+    "    out=np.ones((nx,ny))\n",
+    "    out[:,:]=vel[:,:]\n",
+    "    for a in range(2,nx-2):\n",
+    "        out[a,:]=np.sum(vel[a-2:a+3,:], axis=0) /5\n",
+    "    return out "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# True velocity\n",
+    "vel=np.ones((nx,ny)) + 2.0\n",
+    "vel[floor(nx/2):nx,:]=4.5\n",
+    "\n",
+    "# Smooth velocity\n",
+    "v0=smooth10(vel,nx,ny)\n",
+    "m0=v0**-2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "m=vel**-2\n",
+    "# True data\n",
+    "for ti in range(0,nt):\n",
+    "    for a in range(1,nx-1):\n",
+    "        for b in range(1,ny-1):\n",
+    "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
+    "            if ti==0:\n",
+    "                u[ti,a,b]=ts(0,0,0,0,0,0,src,m[a,b],tstep,hstep)\n",
+    "            elif ti==1:\n",
+    "                u[ti,a,b]=ts(0,u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,m[a,b],tstep,hstep)\n",
+    "            else:\n",
+    "                u[ti,a,b]=ts(u[ti-2,a,b],u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,m[a,b],tstep,hstep)\n",
+    "            if a==5 :\n",
+    "                rec[ti,b]=u[ti,a,b] "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "v=np.ones((nx,ny))+.5\n",
-    "v[floor(nx/2):nx,:]=2.5\n",
-    "\n",
-    "def smooth10(v):\n",
-    "    v0=v\n",
-    "    for a in range(2,nx-2):\n",
-    "        v0[a,:]=np.sum(v0[a-2:a+2,:)/5\n",
-    "    return v0\n",
-    "\n",
-    "v0=smooth10(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# True data\n",
-    "for ti in range(1,nt-1):\n",
-    "    for a in range(1,nx-1):\n",
-    "        for b in range(1,ny-1):\n",
-    "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
-    "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
-    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v[a,b]**-2, s:tstep, h:hstep}\n",
-    "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<hstep/2 :\n",
-    "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#set source as Ricker wavelet for f0 \n",
+    "# SMooth data\n",
     "rec0= np.zeros((nt,nx)) # receiver all over x at y=0\n",
-    "for ti in range(1,nt-1):\n",
+    "for ti in range(0,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
     "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
-    "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
-    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v0[a,b]**-2, s:tstep, h:hstep}\n",
-    "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<hstep/2 :\n",
-    "                rec0[ti+1,a]=u[ti+1,a,floor(ny/2)] "
+    "            if ti==0:\n",
+    "                u[ti,a,b]=ts(0,0,0,0,0,0,src,m0[a,b],tstep,hstep)\n",
+    "            elif ti==1:\n",
+    "                u[ti,a,b]=ts(0,u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,m0[a,b],tstep,hstep)\n",
+    "            else:\n",
+    "                u[ti,a,b]=ts(u[ti-2,a,b],u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,m0[a,b],tstep,hstep)\n",
+    "            if a==5 :\n",
+    "                rec0[ti,b]=u[ti,a,b] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "v  = np.zeros((nt,nx,ny)) #solution to WE\n",
     "grad= np.zeros((nx,ny)) # receiver all over x at y=0\n",
     "\n",
-    "for ti in range(1,nt-1):\n",
+    "for ti in range(0,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
-    "            if b-floor(ny/2)<hstep/2 :\n",
-    "                dd=rec0[ti+1,a]-rec[ti+1,a]\n",
-    "            src = source(a,b,tstep*ti)\n",
-    "            subs={p(x,y,t-s):v[ti-1,a,b],p(x-h,y,t):v[ti,a-1,b], p(x,y,t):v[ti,a,b], p(x+h,y,t):v[ti,a+1,b],\n",
-    "                  p(x,y-h,t):v[ti,a,b-1], p(x,y+h,t):v[ti,a,b+1], dd(x,y,t):dd , m:v0[a,b]**-2, s:tstep, h:hstep}\n",
-    "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
+    "            if a==5:\n",
+    "                resid=rec0[nt-ti-1,b]-rec[nt-ti-1,b]\n",
+    "            else:\n",
+    "                resid=0\n",
+    "            if ti==0:\n",
+    "                 v[ti,a,b]=ts(0,0,0,0,0,0,resid,m0[a,b],tstep,hstep)\n",
+    "            elif ti==1:\n",
+    "                 v[ti,a,b]=ts(0,v[ti-1,a-1,b],v[ti-1,a,b],v[ti-1,a+1,b],v[ti-1,a,b-1],v[ti-1,a,b+1],resid,m0[a,b],tstep,hstep)\n",
+    "            else:\n",
+    "                 v[ti,a,b]=ts(v[ti-2,a,b],v[ti-1,a-1,b],v[ti-1,a,b],v[ti-1,a+1,b],v[ti-1,a,b-1],v[ti-1,a,b+1],resid,m0[a,b],tstep,hstep)\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
-    "            grad[a,b]=grad[a,b]+(v[ti+1,a,b]-2*v[ti,a,b]+v[ti-1,a,b])*(u[nt-ti+1,a,b])"
+    "            if ti==0:\n",
+    "                grad[a,b]=grad[a,b]+tstep**-2*(v[ti,a,b])*(u[nt-ti-1,a,b])\n",
+    "            elif ti==1:\n",
+    "                grad[a,b]=grad[a,b]+tstep**-2*(v[ti,a,b]-2*v[ti-1,a,b])*(u[nt-ti-1,a,b])\n",
+    "            else:\n",
+    "                grad[a,b]=grad[a,b]+tstep**-2*(v[ti,a,b]-2*v[ti-1,a,b]+v[ti-2,a,b])*(u[nt-ti-1,a,b])"
    ]
   },
   {
@@ -584,6 +608,21 @@
    },
    "outputs": [],
    "source": [
+    "fig2 = plt.figure()\n",
+    "plt.hold(\"off\")\n",
+    "shotrec = plt.imshow(rec)   # this is how you'd plot a single line...\n",
+    "plt.show()\n",
+    "\n",
+    "fig2 = plt.figure()\n",
+    "plt.hold(\"off\")\n",
+    "shotrec = plt.imshow(rec0)   # this is how you'd plot a single line...\n",
+    "plt.show()\n",
+    "\n",
+    "fig2 = plt.figure()\n",
+    "plt.hold(\"off\")\n",
+    "shotrec = plt.imshow(rec0-rec)   # this is how you'd plot a single line...\n",
+    "plt.show()\n",
+    "\n",
     "fig2 = plt.figure()\n",
     "plt.hold(\"off\")\n",
     "shotrec = plt.imshow(grad)   # this is how you'd plot a single line...\n",
