--- a/AcousticFWI/Visco-Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Visco-Acoustic-wave-equation.ipynb
@@ -125,6 +125,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gradgrad=r*(dxr*dx+dyr*dy)\n",
+    "gradgrad"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -333,7 +345,7 @@
     "        return 0.0\n",
     "    \n",
     "def dampx(x):\n",
-    "    dampcoeff=np.log(1.0/0.001)/(5.0*hstep);\n",
+    "    dampcoeff=1.5*np.log(1.0/0.001)/(5.0*hstep);\n",
     "    if x<nbpml:\n",
     "        return dampcoeff*((nbpml-x)/nbpml)**2\n",
     "    elif x>nx-nbpml-1:\n",
@@ -341,7 +353,7 @@
     "    else:\n",
     "        return 0.0\n",
     "def dampy(y):\n",
-    "    dampcoeff=np.log(1.0/0.001)/(5.0*hstep);\n",
+    "    dampcoeff=1.5*np.log(1.0/0.001)/(5.0*hstep);\n",
     "    if y<nbpml:\n",
     "        return dampcoeff*((nbpml-y)/nbpml)**2\n",
     "    elif y>ny-nbpml-1:\n",
@@ -455,7 +467,8 @@
     "                else:\n",
     "                    resid=0\n",
     "                damp=dampx(a)+dampy(b)\n",
-    "                v3[a,b]=tsA(v1[a,b],v2[a-1,b],v2[a,b],v2[a+1,b],v2[a,b-1],v2[a,b+1],rho[a-1,b],rho[a,b],rho[a+1,b],rho[a,b-1],rho[a,b+1],resid,m[a,b],rho[a,b]**-1,tstep,hstep,damp)\n",
+    "                v3[a,b]=tsA(v1[a,b],v2[a-1,b],v2[a,b],v2[a+1,b],v2[a,b-1],v2[a,b+1],rho[a-1,b],rho[a,b],rho[a+1,b],rho[a,b-1],rho[a,b+1],\n",
+    "resid,m[a,b],rho[a,b]**-1,tstep,hstep,damp)\n",
     "                grad[a,b]=grad[a,b]-(v3[a,b]-2*v2[a,b]+v1[a,b])*(u[ti,a,b])\n",
     "        v1,v2,v3=v2,v3,v1\n",
     "    # No update inside the pml, only in the physical domain\n",
@@ -511,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -525,12 +538,12 @@
     "    r = plt.imshow(ut[i,:,:])   # this is how you'd plot a single line...\n",
     "    plts.append( [r] )  \n",
     "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -539,7 +552,7 @@
     "fig2 = plt.figure()\n",
     "plt.hold(\"off\")\n",
     "shotrec = plt.imshow(rect,vmin=-10,vmax=10)   # this is how you'd plot a single line...\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
@@ -563,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -585,23 +598,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fig' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-56066f5228a2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# this is how you'd plot a single line...\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mplts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mani\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0manimation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mArtistAnimation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minterval\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[0mrepeat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# run the animation\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fig' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plts = []             # get ready to populate this list the Line artists to be plotted\n",
     "plt.hold(\"off\")\n",
@@ -609,12 +610,12 @@
     "    r = plt.imshow(v[i,:,:])   # this is how you'd plot a single line...\n",
     "    plts.append( [r] )  \n",
     "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +643,7 @@
        "(5549369.19677, 5549369.19677, 1.86264514923e-09, 1.0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,11 +683,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAIAAAAAPBAMAAADe9tr1AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAIom7VJlmdt1E7xDN\nMqsI8sYEAAACVklEQVQoFaWTTWsTURSGnyQzY5M0HxXqSrCkWMWFRnEjRZqVSxtauhCpDoIWFLR2\n40Z0UNzW2YggQit1U4s4uKmIkFBRF0UMQneiWWi6slpaU9tUx3PP5B84MM/Me+497/06F3YWjpKZ\nHCoUmJ84hSKSQPfwcUhf2+tHiBV6S/AuWPKhMFGTDksQKzPoOmEY/qVMtqSIpKTWOeRjw9cI3VhN\neBZuwCvfrorBbdixTs6z81C3XGJVhUppzgakpjkBuyPcLPEbFpal9wKJoiTPQHKWSjUO8Vq8SNqL\nYKQYpDyyf+iFFxEe+OltGUlanFUB7Hqtn0FXPvdJrgVxV6FS0NkyBlP99EVAl1CXlsS0AHoigzfm\nXyb0o9nXhkoTpUM8wnNuBLEsQ2NslNz7fbLhTt4YZPZLkLgLdrjYhkqJwlQPnN0O2vh4R0L97PEr\nb0mVmCeawYEaVKTl/KctP4JKieg2O6MfZlHIOE9NMOFVWthz9LQNUnNwXSZU58qcQqXpiV2Eyzhb\ngUICT2Qy2Ks5D2fTqhmDWJ7Euo6UCsisK1SafG7IK/ZfSoouGChlq8Q3U1Wc5nOMQa5Fokn6b7SK\nhllKQ6XJt8p0pX9KQVwycMOAAVdy7ZacgrN5cmVla5lUkY5VMr/k1PNwWKHSGEilXuWRLDqvmIG7\neSnMjqolezAtHSTiuAyOY4lBchFnXKFSaiZ2q3DG42HAWIQLWBum9i/mOcLLkhisyXtv5JjsxGP5\n+zwkZ6tQOUmnXBGPzDe5TIrkyLAvN+zgaTmOke+S0Rs2hP/3/APNMNhjK643YwAAAABJRU5ErkJg\ngg==\n",
+      "text/latex": [
+       "$$37887.2883564$$"
+      ],
+      "text/plain": [
+       "37887.2883564"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Misfit\n",
     "\n",
@@ -696,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -707,18 +723,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "\n",
-    "shotrec = plt.imshow(rec0,vmin=-100,vmax=100)   # this is how you'd plot a single line...\n",
-    "plt.show()\n",
+    "shotrec = plt.imshow(rec0-rect,vmin=-100,vmax=100)   # this is how you'd plot a single line...\n",
+    "#plt.show()\n",
     "\n",
-    "shotrec = plt.imshow(Im2,vmin=-100000,vmax=100000)   # this is how you'd plot a single line...\n",
-    "plt.show()"
+    "shotrec = plt.imshow(Im1,vmin=-100000,vmax=100000)   # this is how you'd plot a single line...\n",
+    "#plt.show()"
    ]
   },
   {
@@ -734,18 +750,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "Im2=Gradient(nt,nx,ny,m0,rho,rec0,u0)"
+    "Im2=Gradient(nt,nx,ny,m0,rho,rec0-rect,u0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -756,35 +772,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAo4AAAAVBAMAAAA6HnJ6AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAAIDUlEQVRYCe1YbYhcZxV+Zmbnzuzszuz+EQIG99LSxoK4g0axGOhYS6F+ZRFJpdbm\nUlra0uKOBI2F0p1KJFtcktXUQiuxAyIiClmwBcG2TjBKLCEZ/SGC4k6DWooxGzfZSfM5Puc59+7c\nHdf+mv6qL8yZ957zvM8557nv/ZgB/j+Go0AmHA7Pu5glO8nmt/cFuDva2sSOY59A5tXj8/NAPgJy\nJ+4wFN57Zn6+ERx/ohoHH/rGa4AWKAJkWgbbdAj7sfnPQuTIze9rI9i70BS4uP8p4LH9vwYMFmc2\np5IN8onlsf1H49yqLv/1DGuBL+Aq1iuESIFdFjOjTHaQGg6nw4IqzI117Y319VCyuG7jU/fAVuB1\nHimNM7/Qu4igg4PNbK/Xu47czgj4CoqXLTpNV+eRMHcIHmyh0oYt8AgwVjPYpsOwuRaWQ5FjB8qr\nGAf+ZeDgHvwGwXdxaxUGc3I5lWyATyz4Mh6tem5VN9rr1Q2nBfl28HMI4aTY3mXIjEgH+ODwOKjC\nZMSrllN6yOl1i1TdAy9ywwGFRp/6i29UUYkwujheBTrBZ1Yi4B/Ac4bgfqngTeBvULAcIjcDW+AR\n4PGawTYbwhauYWJJ5Jhr4wr+AHzEwPkG7kBlEZWaYCJ3p5IN8Iklu4hinFvV5Q/sEUwLbgG+BSFE\nigdOUkIZZRrgg+BJGSpMRrxqua+HS6G6xefdo/CMRBylEsnocDK6hMq/i9znk8BcBHwfWOEUDeAp\nrAEHIwWLNQRL6DDgEeRuqtnBZkPY0vOYnRE5ftIM1rAPeNTA05Z/YgbFrmCeWU4lG+ATy0gH5a7n\nVnWVGKQFnwOWIyFEyh5tP5oR6QAfBKdTQRUmI96GtZzSQ06vW6QdkX3oC9zNi/ipDtxYIN+ljvz+\nMT+m4+7IdQRK9eACfU0FSxeiYui9WIS652sMbDocy/7ChJzX9ZE78U1D32VmtobC5QTGzOZcT2aA\n1FgOJzooXfPcqi7W0RdcB460hRBpSkdlShFpKjhncZCFwe46cddsLCmZVcnpdad0bFBH3kcWROfm\n9LajNhmzM1jjZy6iAX7lXyPA97gfQ3pq3KSrlCFewAhu/N86Oha4lzAnz/NW2Ht/aMdrW55oYpT7\ncTWB1WJnksxQqXEvZlsoXUxys7rKDfZo8epuvkod60I4aX8/KlOKyKaB4JzEQRbGrWRGXVtjKT3M\n6XVLR3WfrZqOC7hdUDd34rYmZ0ca3F4hJ3MRDUpvmYVtn4M8Kbb3QmC8twuIFzAS1N9GR2Ez324Z\ni5FveZmTU2sRbbAW4jCK55C/6JRG7s44GUGpYSy3NZB5K8nN6kainB6FtmAPi51qCOGk6zo6aYrK\npjnBkzK8MFXnXbMxjnU95FTd0lHdPwTT8Sa8ImhiRpY4e5GfWfO4jmM1myM4xzNVL9t+tOAH3nOp\nyS9bYJEi3kbHGPv0JBcYOYrfQfbo7uc5C3oRfhfhbvxpNaYkuTvjZIZPj6cnXUfPDa/u04awBTf2\ndXTSvo6eKU2V0jEOsjBV568f1hjHuh6WzOuWjqqgIR3/DDYTfOmXHC9Zl+Pn+alx8jV+Yh2P2ZT3\nmRmabV892FYw28H0s3TYAov8fhMdE94EO8oFIucrQPRBZC9FJLjCe3wT2b1brsUwy+xOT8bDDWP0\n2dmGXdeeG17dqaphuOCP1JHXtRBGmro/OukGLgSC05cEn4t4YMZ41XJKD3N63bGO4+fLk9JxynRM\nRoV3qcvAk3asbTMXcVbo0HDE23IlUnA0QuZavICRoLGJjlpGI2yuihF2ZeQfBna2qekUT4ndcqdD\nfle6gnnmxGnJNgyxTLRQTnIXOsDfecNpOmwlusrnWVsIeirdlI4JqSNjKzjnCqowGRQ6dHrLfT3M\n6XWbjur+YcQ6pq5r3pjHuyi32GjA51i8H/8CFs8x2zGL+7h/GbRL+7QvsEj57NmVH9QF+G8j7EQX\nI6tOzmto583nWEhI7F3aj7woO4J55sTJZBuHWNhethvntuqowanIcffZBpiOhKAn30npmJA6MraC\nc66gFRbKQF2r5ZQedH7U6zYdVcFfz5699Ab41nN7n3acZ2DGfubsQeaqueci/dwrSMepFnBLNcPr\n2IL22vlJXwCL0FMzu9kQluGx807+DJ971UO8uxjvMu+PyB7CVFUwzyynJ9tIKJbCIsZnPHemhUK1\nBbxkMC14HPx9JIRIUzqKdCMdfz0YnENBFSYjXm9s67oecnrdpmPcPbiAz5kDfeZci6XkfjF/cgnl\nq+aei4CPzy/8k2/QzNTijTF6MOT7FYOlXcjWtcAjfJeuCcZlg0PYbIjlupPfgPJF/CjCNlsw0ggO\no7Ar+LxTemY5lcwyp4ZY+Gx8ZNJzq7oddh4I1IKxdsBnhSFEmtJRpPwFsGEInpShwmTEq5ZTesip\nuvXwirvHBRKe4I7sjx0Hfos8f0cvIXeY3pMvvBpid693BWMd4NY2n2QnPkW/gu87/hr/duACj6C4\n83qoF086BoewP+NaJy+dONZE5sxCU7wLJyf5/kUPBBM5zKlkg5TGgof3vh7nVnW542cio9KCYP+T\n5BNCpONvXjkNGZEmL8NJiYJbe5ZRhcmIVy2n9JBTdTufd7+vdxq4B2PVhHII3z8cAscAxbApS8Ps\nN6k1t4hsKzkYwnc4BI4BimFTZgf4h3JYrPNpMRQmkQTh8LhipqFT3j/0Ekn4ID/bh0f8DpzroVOG\nw2u3z2R7MfeOMPdzvAtm2Sr+A4fVi7f+ggd7AAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAokAAAAVBAMAAADYwmkDAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAAIDElEQVRYCe1XbYicZxU9M7Pzzuzs7Oz+EQoGM7ZILIgZ2goGAx2tFPErYympYGte\npKUNLc5KqEmhNKNEdsUl2ZoasKIdECmikAVTELTNBKMsJSTT/vKHmDGopRiTuE0nzSbb8dxzn3d3\ndrL50x1B0At7997nOffcj+f9GuD/MowJpMrDYPkf5vig9X4XUq8szMzQ2hSsj898wTY2maKkWnj/\n+ZmZRvabqVeB7Sc/CQghK1p4uuKwVR34ZvZN4tF9SYh4iIn2zjadDzCE1APxpib3mCkzc6C9yjRg\nKeMT0yeAJ6Z/R6qFpxlvwsDgZGPzWbqwwE44pTqwrX5JCNSEEJlTn54M1SlFSMaMSuIjMFKvQJiS\nFbET6V6v9y6tY25lWjhblktFGatiKxGd0V5vClEHh5pCyMLucuaww1a18z3SLNbQQqntQPEQUwT+\n6XwQQuqF3hULZ6btGF9cZVprOdFDeLwSfR/bKsi2o185goHuZHbEtnLM6+Ql0uU8jVIdOHhVJwRq\nQoivI7/kWE9hySCl6jQCkWrbMagBuQaKFaBD6zm3csuYmJfr+Z6qggdfQvbgHv6LMTonhCy8Cfx1\ntSy3nO/LGKmOl5GpORAgD+V14GPOB0ME9QZLEGJ/G9fMXE9ElJ5DvlaaQ6mK24HvOI7UcqLPX4y5\nwk486cOnOUVRqoNB0oRATQjxd+CHXp1SKJkUQ5lEIxCptr0M7ANGK8gD+UngjvvdKjyPek2usmY+\nVEUD+BbnSBmdR+lfQsjC28Ch2Db6RHzpt7iSryKadyCMh3IAeNz5hJCyM6QY4ufNiJTri4hGOhjv\nTtSQ7+KLwNnYoBYYnP22wE5C0hynKMqGdTAoCYGaEOJHwMVJWUqhZFKeRCOAkWrby8Bu4BeifpG6\ncb+ZZumOdpeTyFa5UpjyKWa7nKIQsqLLPOsm/QF5ESNzXCpcjvPlEOI8OHovvm07U44QDB2FO+Lm\nd7SIJjooLNeryC2BT6GjbYu0wOBoiiw9JLWG4Q8JZhyUEJM0QcSumFNUdUqhZFKeZHWK2vYy+DDB\nrKirQLqiKdICHlxxgds0xRHezLf6w3zMKiOCT4oufsBrsWz2Wqli4kvTfLFcXLSRGTDwoNT7cJkr\n5BPCYee2nOCaZ8q2aN5Mxrr1FgpXRnktLkbXOUWNhoGJsz9eKd2S+hRFyYwDksQkTTjiOBloKYWS\nSXl1PgIj1bYU59vCp4w6XwYehU3RrNT3WonLF+GUpshhjMSZJSJwtOEIWYeAXTceMlnq92G0jWJv\nZwgJPMCZt2MukU8Ih92Lu5sh0y2/tYCbydHG3cz+Tv4Sslcy7wCbG0QadeLYFL0Tq9On6JQ6TqJX\nJYlBaEKIAlmtOqVQMimvzkdgU9S2FE+thpeNtc6/hqZoFvDdyeASDptidEnrnzN9zBQRsrJT4+tc\ni2Spd1E8go+872rTgc7DlCd2Pe98QjiMRzQfMiH/LANuJsfgPT2APy6uDMGoE8em6J2oTr8WjTJ0\n0E+cxMCbcMRYNWAtRd8Uk/o5ApHaNqQwPg+2BDzJZ8ekpkiLMnokuMBrmmKupvUzFX6qVB0RrC3f\nONTWXr8iy8Q80kvpDrYecaDzAB9F+moM4xNCiqHFt0ImviTjfira0Vd+Q3lpUkT1Bu9opPfeshzx\nqtEdbdSJwymG0lWnT9EoQwf91EkMoCYccZIIWZZCyTxjUj9HIFLbVhm8dy/5FHl5PQZNkVamgpHl\n4CJqaIp2Qn/jI7AJPBMQsqwofVyYsSpk4TMjvTgaI7UsYOABONTNbfsyDAiDlfiYW3LEncCOG08l\nYWbuiRbGSYlSF9f5GiTWA4PDKYbSifXLxikt46CEGFtmE0LkOnQCttRVMilP4iMIR8MKVIZN0e7o\niC+rP1+4cPUNWRNdjCy6y0v0woWLP5lCneR8kZzhSbdwpxCyGIyvmlojxseXb3rJng/nBAw8urFK\nfGp2AkIwTrzYdUQvxo7yGrI+x3Kzw7SVn+3YLbs1TkoMDqfopRvWp+iUlnFQQowtswkh/mQXUcBm\nO0om5dX5CMIUWYHKQGFeb5cUD4XyHC9OWqNVjNnHHl0JfWxugb9D8JJ+XO1xxCZgD26vpAy7Voxl\nnM/FOX6M4h77PbaHAOMBDnN8FfEJIVXk8dccwaTHGbS+GFFuDsVa+jA2V/AU8HsHkjo4+2NbIYsn\ntYad0joYlITAmzBEqoWcV6cUSibFUCYhgiMwUm17GfZ2Ocj98etUwGW30mWcnXK3br1NVHnntOyX\nFKMyv545PS+ELDwZP8Iry2B9Ir7PYHe7wJ+XUw4UD4E/i7HF+WAIqUyLp8F4ZroV41du4AvUTvQy\ndk/mdkb3cfLt6FnHMlAOP15jA1/2Or1hUaqDwQ/6hEBNCPGJmdl/eHWewpLxdqVSdRqBpqhtx6DY\n0ld35seW+kDvHGT98tRngzvW4Ut6x7tlbGvzabhwPkaWv6jnYQi38obVF6RRBBFL/tRfgA8svBqA\n4iFf6vxsE+KDEFLbD/6BoZapcOpk8wa+QOsZH9tL3lmiEE0/M4mkRDk4/cIrZXXi2OKb185BlJ7x\neByo/F9CoCaE2NXrXQvVKYWSSak6jUCkXoEwyLJiuwg2Kj/dKMFA/LD5EvrCMJpNyFb+b+MN3lrx\n3rtRfu+h60YOmy9Jkk6Mof6fJts9G2eMyhvn6GcYNt8K99dWrCEaUY1kd22ccNhHPGy+lQ7LK9YQ\nDX5y8KXxH6EeYpX/7VS3Af8GxymCOUeaJc0AAAAASUVORK5CYII=\n",
       "text/latex": [
-       "$$\\left ( -52712.7978574, \\quad -83238.698769, \\quad 30525.9009116, \\quad 0.633272728154\\right )$$"
+       "$$\\left ( 74734.4752329, \\quad 76824.8766543, \\quad -2090.40142137, \\quad 0.972790045199\\right )$$"
       ],
       "text/plain": [
-       "(-52712.7978574, -83238.698769, 30525.9009116, 0.633272728154)"
+       "(74734.4752329, 76824.8766543, -2090.40142137, 0.972790045199)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "term11=np.dot((rec0).reshape(-1),du1.reshape(-1))\n",
+    "term11=np.dot((rec0-rect).reshape(-1),du1.reshape(-1))\n",
     "term21=np.dot(Im2.reshape(-1),dm.reshape(-1))\n",
     "\n",
     "term11,term21,term11-term21,term11/term21\n",
     "\n",
     "#if abs(term11/term21-1)<1e-9\n",
     "#    print('Adjoint test passed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shotrec = plt.imshow(Im2,vmin=-10000,vmax=10000)   # this is how you'd plot a single line...\n",
+    "#plt.show()"
    ]
   },
   {
@@ -897,9 +925,29 @@
    "source": [
     "shotrec = plt.loglog(H,error21,H,H)   # this is how you'd plot a single line...\n",
     "plt.show()\n",
-    "shotrec = plt.loglog(H,error22,H,hh)   # this is how you'd plot a single line...\n",
+    "shotrec = plt.loglog(H,abs(error22),H,hh) # this is how you'd plot a single line...\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "error22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
